--- a/templates/config-wb-mai2-cc.json.jinja
+++ b/templates/config-wb-mai2-cc.json.jinja
@@ -50,7 +50,7 @@
                 "min": 0,
                 "max": 65534,
                 "order": 1,
-                "default": 100,
+                "default": 100
             },
             {
                 "title": "Mode",
