--- a/templates/config-wb-mai2-cc.json.jinja
+++ b/templates/config-wb-mai2-cc.json.jinja
@@ -210,7 +210,7 @@
                 "name": "Input Voltage",
                 "reg_type": "input",
                 "address": 121,
-                "type": "V",
+                "units": "V",
                 "scale": 0.001,
                 "enabled": false,
                 "group": "hw_info"
@@ -221,7 +221,7 @@
                 "address": 119,
                 "scale": 0.001,
                 "type": "value",
-                "units": "V",
+                "units": "voltage",
                 "enabled": false,
                 "group": "hw_info"
             },
