--- a/templates/config-wb-mai2-cc.json.jinja
+++ b/templates/config-wb-mai2-cc.json.jinja
@@ -221,7 +221,7 @@
                 "address": 119,
                 "scale": 0.001,
                 "type": "value",
-                "units": "voltage",
+                "units": "V",
                 "enabled": false,
                 "group": "hw_info"
             },
