Fix: input_physical_value_scale

--- a/templates/config-wb-mai2-cc.json.jinja
+++ b/templates/config-wb-mai2-cc.json.jinja
@@ -138,7 +138,7 @@
                 ],
                 "required": true,
                 "default": 1,
-                "condition": "input_{{ input_num }}_mode"
+                "condition": "isDefined(input_{{ input_num }}_mode)"
             },
             {% endfor -%}
             {
