--- a/templates/config-wb-mai2-cc.json.jinja
+++ b/templates/config-wb-mai2-cc.json.jinja
@@ -6,10 +6,12 @@
     "group": "g-wb",
     "hw": [
         {
-            "signature": "MAI2CC"
+            "signature": "MAI2CC",
+            "fw": "4.32.0"
         },
         {
-            "signature": "WB-MAI2-MINI/CC v.3"
+            "signature": "WB-MAI2-MINI/CC v.3",
+            "fw": "4.32.0"
         }
     ],
     "device": {
