Deprecated tag was removed

--- a/templates/config-wb-mai2-cc-fw-4.32.json.jinja
+++ b/templates/config-wb-mai2-cc-fw-4.32.json.jinja
@@ -1,8 +1,8 @@
 {% set INPUTS_NUMBER = 2 -%}
 
 {
-    "title": "WB-MAI2_template_title",
-    "device_type": "WB-MAI2",
+    "title": "WB-MAI2-mini_template_title",
+    "device_type": "WB-MAI2-mini/CC-fw-4.32",
     "group": "g-wb",
     "hw": [
         {
@@ -15,7 +15,7 @@
         }
     ],
     "device": {
-        "name": "WB-MAI2-MINI/CC",
+        "name": "WB-MAI2-mini/CC-fw-4.32",
         "id": "wb-mai2-mini",
         "response_timeout_ms": 1,
         "enable_wb_continuous_read": true,
@@ -254,12 +254,12 @@
 
         "translations": {
             "en": {
-                "WB-MAI2_template_title": "WB-MAI2-MINI/CC (2-channel analog input module)",
+                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC (2-channel analog input module)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "Uptime": "Uptime (s)"
             },
             "ru": {
-                "WB-MAI2_template_title": "WB-MAI2-MINI/CC (2-канальный модуль измерения токового сигнала)",
+                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC (2-канальный модуль измерения токового сигнала)",
                 "Inputs": "Входы",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
