Fix: signature name

--- a/templates/config-wb-mai2-cc-fw-4.32.json.jinja
+++ b/templates/config-wb-mai2-cc-fw-4.32.json.jinja
@@ -10,7 +10,7 @@
             "fw": "4.32.0"
         },
         {
-            "signature": "WB-MAI2-MINI/CC v.3",
+            "signature": "WB-MAI2-mini/CC v.3",
             "fw": "4.32.0"
         }
     ],
@@ -254,12 +254,12 @@
 
         "translations": {
             "en": {
-                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC (2-channel analog input module)",
+                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC fw 4.32 (2-channel analog input module)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "Uptime": "Uptime (s)"
             },
             "ru": {
-                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC (2-канальный модуль измерения токового сигнала)",
+                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC fw 4.32 (2-канальный модуль измерения токового сигнала)",
                 "Inputs": "Входы",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
