Fix after review

--- a/templates/config-wb-mai2-cc-fw-4.32.json.jinja
+++ b/templates/config-wb-mai2-cc-fw-4.32.json.jinja
@@ -255,8 +255,8 @@
             "en": {
                 "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC fw 4.32 (2-channel analog input module)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
-                "minimum_value_title": "Lower limit of the measurement range",
-                "maximum_value_title": "Upper limit of the measurement range",
+                "minimum_value_title": "Lower limit of the Measurement Range",
+                "maximum_value_title": "Upper limit of the Measurement Range",
                 "physical_value_scale_title": "Range"
             },
             "ru": {
