--- a/templates/config-wb-mai2-cc-fw-4.32.json.jinja
+++ b/templates/config-wb-mai2-cc-fw-4.32.json.jinja
@@ -174,7 +174,7 @@
                 "id": "input_{{ input_num }}_current",
                 "address": {{ input_num - 1 }},
                 "type": "value",
-                "units": "uA",
+                "units": "mA",
                 "format": "u16",
                 "scale": 0.001,
                 "group": "channels_{{ input_num }}"
@@ -253,14 +253,14 @@
 
         "translations": {
             "en": {
-                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC fw 4.32 (2-channel analog input module)",
+                "WB-MAI2-mini_template_title": "WB-MAI2-mini/CC fw 4.32 (2-channel analog input module)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "minimum_value_title": "Lower Limit of the Measurement Range",
                 "maximum_value_title": "Upper Limit of the Measurement Range",
                 "physical_value_scale_title": "Range"
             },
             "ru": {
-                "WB-MAI2-mini_template_title": "WB-MAI2-MINI/CC fw 4.32 (2-канальный модуль измерения токового сигнала)",
+                "WB-MAI2-mini_template_title": "WB-MAI2-mini/CC fw 4.32 (2-канальный модуль измерения токового сигнала)",
                 "Inputs": "Входы",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
