Fix: templates/config-wb-mai2-cc-fw-4.32.json.jinja

--- a/templates/config-wb-mai2-cc-fw-4.32.json.jinja
+++ b/templates/config-wb-mai2-cc-fw-4.32.json.jinja
@@ -2,7 +2,7 @@
 
 {
     "title": "WB-MAI2-mini_template_title",
-    "device_type": "WB-MAI2-mini/CC-fw-4.32",
+    "device_type": "WB-MAI2-mini/CC-since-fw-4.32",
     "group": "g-wb",
     "hw": [
         {
